Fix background gradient not showing on navigation

--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -228,8 +228,8 @@
 
 .nav-primary {
     background-color: $nav-color-light;
-    background: $background-gradient;
-    background-attachment: fixed;
+    background-image: $background-gradient;
+    background-attachment: scroll;
     box-shadow: inset (-$shadow-micro) 0 0 rgba(0, 0, 0, .2);
     overflow-y: hidden;
     text-align: center;
@@ -327,9 +327,9 @@
 .nav-secondary,
 .nav-tertiary,
 .nav-quaternary {
+    background-attachment: scroll;
     background-color: $nav-color-dark;
-    background: $background-gradient;
-    background-attachment: fixed;
+    background-image: $background-gradient;
     box-shadow: $shadow-large 0 0 color(background, shadow);
     left: $nav-primary-width;
     margin-left: -320px;
